--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   custom_map_markers: ^0.0.2+1
   http: ^1.1.0
   flutter_easyloading: ^3.0.5
-  shared_preferences: ^2.1.2
+  shared_preferences: ^2.2.2
   intl: ^0.18.1
   flutter_timezone: ^1.0.6
   get_it: ^7.6.0
@@ -60,6 +60,7 @@ dependencies:
   lottie: ^2.7.0
   connectivity_plus: ^5.0.2
   iconsax: ^0.0.8
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
