--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,13 @@ dependencies:
   connectivity_plus: ^5.0.2
   iconsax: ^0.0.8
   flutter_hooks: ^0.20.5
+  csv: ^6.0.0
+  geocoding: ^3.0.0
+  sqflite: ^2.3.2
+  dialog_flowtter: ^0.2.0-nullsafety.0
+  velocity_x: ^4.1.2
+  chat_gpt_sdk: ^2.2.5
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +94,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/csvs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
