--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   otp_pin_field: ^1.2.0+2
   flutter_rating_bar: ^4.0.1
   image_picker: ^0.8.9
-  google_maps_flutter: ^2.3.1
+  google_maps_flutter: ^2.5.3
   custom_map_markers: ^0.0.2+1
   http: ^1.1.0
   flutter_easyloading: ^3.0.5
@@ -70,10 +70,22 @@ dependencies:
   flutter_dotenv: ^5.1.0
   dash_chat_2: ^0.0.20
   webview_flutter: ^4.5.0
+  flutter_spinkit: ^5.2.1
+  flutter_launcher_icons: ^0.13.1
+  upi_india: ^3.0.1
+  razorpay_flutter: ^1.3.6
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/img/logo.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -97,6 +109,7 @@ flutter:
   assets:
     - assets/img/
     - assets/csvs/
+    - assets/img/cuisines/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
